fixed whitespace

--- a/src/RestaurantPage.css
+++ b/src/RestaurantPage.css
@@ -118,23 +118,46 @@ p {
     height: 1500px;
 }
 
+textarea {
+    box-sizing: border-box;
+    font-size: 20px;
+    resize: none; 
+    width: 95%; 
+    background-color: #A3A3A3;
+    color: white; 
+    min-height: 50vh;
+    padding: 40px; 
+    border-radius: 10px; 
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+textarea:focus{
+    outline: none; 
+}
+
 #menu {
     display: flex;
     flex-direction: column;
     flex-grow: 1; 
-
+    min-width: none;
     background-color: #C4C4C4;
-    padding: 50px; 
+    padding: 50px 70px 50px 70px;  
+    min-width: 60vw;
 }
 
 #menuName {
-    padding: 10px; 
+    padding: 10px 10px 10px 0px; 
     padding-bottom: 40px; 
 }
 
 #menuCols {
     display: flex; 
     justify-content: space-between;
+}
+
+.star3 {
+    height: 50px; 
+    width: 50px;
 }
 
 .col {
@@ -156,13 +179,19 @@ p {
 }
 
 #reviewTop {
-    padding: 30px 20px 20px 30px; 
+    padding: 50px 20px 20px 30px; 
 }
 
 #reviews {
     background-color: #A3A3A3;
     height: 1500px;
-    overflow-y: auto
+    overflow-y: auto;
+    min-width: 29vw; 
+}
+
+#reviewText {
+    width: 200px;
+    height: 100px; 
 }
 
 .reviewName {
@@ -183,6 +212,15 @@ p {
     box-sizing: border-box;
     margin-bottom: 30px;
     overflow-y: auto;
+    font-size: 2px; 
+}
+
+#submitRev {
+    display: flex; 
+    justify-content: space-between;
+    padding: 20px 0px 20px 0px;
+    align-items: center; 
+    width: 95%; 
 }
 
 .pp {
